<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="touchscreen_gesture_camera"
        android:title="@string/touchscreen_camera_gesture_title"
        android:summary="@string/touchscreen_camera_gesture_summary" />

    <SwitchPreference
        android:key="touchscreen_gesture_music"
        android:title="@string/touchscreen_music_gesture_title"
        android:summary="@string/touchscreen_music_gesture_summary" />

    <SwitchPreference
        android:key="touchscreen_gesture_flashlight"
        android:title="@string/touchscreen_flashlight_gesture_title"
        android:summary="@string/touchscreen_flashlight_gesture_summary" />

    <SwitchPreference
        android:key="touchscreen_gesture_dialer"
        android:title="@string/touchscreen_dialer_gesture_title"
        android:summary="@string/touchscreen_dialer_gesture_summary" />

    <PreferenceCategory android:title="@*cyanogenmod.platform:string/touchscreen_gesture_extras">

        <SwitchPreference
            android:key="touchscreen_gesture_haptic_feedback"
            android:persistent="false"
            android:title="@*cyanogenmod.platform:string/touchscreen_gesture_haptic_feedback"
            android:summary="@*cyanogenmod.platform:string/touchscreen_gesture_haptic_feedback_summary" />

    </PreferenceCategory>

</PreferenceScreen>
